--- a/TaskDesk_version2/Views/OpenTaskWindow.axaml
+++ b/TaskDesk_version2/Views/OpenTaskWindow.axaml
@@ -2,6 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:TaskDesk_version2.ViewModels"
         x:Class="TaskDesk_version2.Views.OpenTaskWindow"
+        x:DataType="vm:OpenTaskWindowViewModel"
         Title="Task"
         SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner">
@@ -9,40 +10,43 @@
         <Grid Name="Root" Margin="10">
                 
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-            
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            
-            <StackPanel Grid.Row="0" Grid.Column="0" Margin="10">
-                <TextBlock Name="TitleBlock" Foreground="White" Width="200" MaxWidth="200" Margin="5" FontSize="24"/>
                 
-                <ScrollViewer VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" Height="150">
-                    <TextBlock Name="DescriptionBlock" TextWrapping="Wrap" Padding="5" Width="200" MaxWidth="200" Background="#1E1E1E" Foreground="White" Margin="5" FontSize="16"/>
+                <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="200"/>
+                        <ColumnDefinition Width="50"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                
+                <TextBox Grid.Row="0" Grid.Column="0" Text="{Binding Title}" FontSize="18" Background="#1E1E1E" Margin="10"/>
+                
+                <TextBox Name="IdBox" Grid.Row="0" Grid.Column="1" FontSize="18" Background="#1E1E1E" Margin="10" IsReadOnly="True" IsEnabled="False" Foreground="White"/>
+                
+                <DatePicker Grid.Row="0" Grid.Column="2" SelectedDate="{Binding DueDate}" Margin="10"/>
+                
+                <ComboBox Grid.Row="0" Grid.Column="3" Name="StateCombo" Width="200" Margin="10"/>
+                
+                <ScrollViewer Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" VerticalScrollBarVisibility="Auto" Margin="10">
+                        <TextBox Text="{Binding Description}" TextWrapping="Wrap" AcceptsReturn="True" Background="#1E1E1E"/>
                 </ScrollViewer>
                 
-            </StackPanel>
-            
-            <StackPanel Grid.Row="0" Grid.Column="1" Name="DataPanel" Margin="20">
-                <Border BorderBrush="#1E1E1E" Width="200" BorderThickness="1" Margin="0,0,0,8"/>
-                <TextBlock Name="DueDateBlock" Foreground="White" FontSize="16" Margin="5"/>
-                
-                <Border BorderBrush="#1E1E1E" Width="200" BorderThickness="1" Margin="0,0,0,8"/>
-                
-                <TextBlock Name="StateBlock" Foreground="White" Margin="5" FontSize="16"/>
-                
-                <Border BorderBrush="#1E1E1E" Width="200" BorderThickness="1" Margin="0,0,0,8"/>
-                
-                <TextBlock Name="GroupsBlock" Foreground="White" Margin="5" FontSize="16"/>
-                
-                <Border BorderBrush="#1E1E1E" Width="200" BorderThickness="1" Margin="0,0,0,8"/>
-                
-                <TextBlock Name="UsersBlock" Foreground="White" Margin="5" FontSize="16"/>
-                <Border BorderBrush="#1E1E1E" Width="200" BorderThickness="1" Margin="0,0,0,8"/>
-            </StackPanel>
+                <StackPanel Grid.Row="1" Grid.Column="3" Width="200">
+                        
+                        <ScrollViewer Height="150" VerticalScrollBarVisibility="Auto">
+                                <ListBox Name="UsersList" Background="#1E1E1E"/>
+                        </ScrollViewer>
+                        
+                        <Border BorderThickness="1" BorderBrush="#1E1E1E" Margin="0,10,0,10"/>
+                        
+                        <ScrollViewer Height="150" VerticalScrollBarVisibility="Auto">
+                                <ListBox Name="GroupsList" Background="#1E1E1E"/>
+                        </ScrollViewer>
+                        
+                </StackPanel>
                 
         </Grid>
         
