--- a/TaskDesk_version2/Views/OpenTaskWindow.axaml
+++ b/TaskDesk_version2/Views/OpenTaskWindow.axaml
@@ -4,7 +4,10 @@
         x:Class="TaskDesk_version2.Views.OpenTaskWindow"
         x:DataType="vm:OpenTaskWindowViewModel"
         Title="Task"
-        SizeToContent="WidthAndHeight"
+        SizeToContent="Width"
+        Height="500"
+        MinWidth="700"
+        MinHeight="500"
         WindowStartupLocation="CenterOwner">
         
         <Grid Name="Root" Margin="10">
@@ -16,32 +19,34 @@
                 </Grid.RowDefinitions>
                 
                 <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="200"/>
-                        <ColumnDefinition Width="50"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto" MinWidth="200"/>
+                        <ColumnDefinition Width="Auto" MinWidth="50"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*" MinWidth="200"/>
                 </Grid.ColumnDefinitions>
                 
                 <TextBox Grid.Row="0" Grid.Column="0" Text="{Binding Title}" FontSize="18" Background="#1E1E1E" Margin="10"/>
                 
                 <TextBox Name="IdBox" Grid.Row="0" Grid.Column="1" FontSize="18" Background="#1E1E1E" Margin="10" IsReadOnly="True" IsEnabled="False" Foreground="White"/>
                 
-                <DatePicker Grid.Row="0" Grid.Column="2" SelectedDate="{Binding DueDate}" Margin="10"/>
+                <DatePicker Grid.Row="0" Grid.Column="2" SelectedDate="{Binding DueDate}" Height="30" Margin="10" Background="#1E1E1E"/>
                 
-                <ComboBox Grid.Row="0" Grid.Column="3" Name="StateCombo" Width="200" Margin="10"/>
+                <ComboBox Grid.Row="0" Grid.Column="3" Name="StateCombo" Width="200" Margin="10" Background="#1E1E1E"/>
                 
-                <ScrollViewer Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" VerticalScrollBarVisibility="Auto" Margin="10">
+                <ScrollViewer Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" VerticalScrollBarVisibility="Auto" Margin="10" MaxWidth="700">
                         <TextBox Text="{Binding Description}" TextWrapping="Wrap" AcceptsReturn="True" Background="#1E1E1E"/>
                 </ScrollViewer>
                 
                 <StackPanel Grid.Row="1" Grid.Column="3" Width="200">
                         
+                        <TextBlock Background="#1E1E1E" Text="Assigned Users:" FontWeight="Bold" Margin="0,0,0,5" Padding="5"/>
                         <ScrollViewer Height="150" VerticalScrollBarVisibility="Auto">
                                 <ListBox Name="UsersList" Background="#1E1E1E"/>
                         </ScrollViewer>
                         
                         <Border BorderThickness="1" BorderBrush="#1E1E1E" Margin="0,10,0,10"/>
                         
+                        <TextBlock Background="#1E1E1E" Text="Assigned Groups:" FontWeight="Bold" Margin="0,0,0,5" Padding="5"/>
                         <ScrollViewer Height="150" VerticalScrollBarVisibility="Auto">
                                 <ListBox Name="GroupsList" Background="#1E1E1E"/>
                         </ScrollViewer>
