--- a/TaskDesk_version2/Views/MainWindow.axaml
+++ b/TaskDesk_version2/Views/MainWindow.axaml
@@ -47,7 +47,7 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             
-            <Border Padding="8" Margin="4" Background="#1E1E1E">
+            <Border Padding="8" Margin="4" Background="Gray">
             <StackPanel Grid.Row="0" Name="Header" Orientation="Horizontal" Spacing="10">
                 <TextBlock Text="Title" FontWeight="Bold" Width="150"/>
                 <TextBlock Text="Description" FontWeight="Bold" Width="150"/>
@@ -62,7 +62,7 @@
             <ItemsControl Grid.Row="1" ItemsSource="{Binding Tasks}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <Border Padding="8" Margin="4" Background="#1E1E1E" DoubleTapped="TaskDoubleClick">
+                        <Border Padding="8" Margin="4" Background="Gray" DoubleTapped="TaskDoubleClick" PointerEntered="PointerEntered" PointerExited="PointerExited">
                             <Border.ContextFlyout>
                                 <MenuFlyout>
                                     <MenuItem Header="Open Task" Click="TaskOpenClick"/>
