--- a/TaskDesk_version2/Views/OpenTaskWindow.axaml
+++ b/TaskDesk_version2/Views/OpenTaskWindow.axaml
@@ -3,6 +3,8 @@
         xmlns:vm="clr-namespace:TaskDesk_version2.ViewModels"
         x:Class="TaskDesk_version2.Views.OpenTaskWindow"
         x:DataType="vm:OpenTaskWindowViewModel"
+        CanResize="False"
+        CanMaximize="False"
         Title="Task"
         SizeToContent="Width"
         Height="500"
@@ -25,15 +27,18 @@
                         <ColumnDefinition Width="*" MinWidth="200"/>
                 </Grid.ColumnDefinitions>
                 
-                <TextBox Grid.Row="0" Grid.Column="0" Text="{Binding Title}" FontSize="18" Background="#1E1E1E" Margin="10"/>
+                <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal" MaxWidth="200">
+                        <TextBlock Text="Title:" FontSize="18" Background="#1E1E1E" Margin="5" VerticalAlignment="Center"/>
+                        <TextBox Text="{Binding Title}" FontSize="18" Background="#1E1E1E" Margin="5" HorizontalAlignment="Right" MaxWidth="140" Width="140"/>
+                </StackPanel>
                 
-                <TextBox Name="IdBox" Grid.Row="0" Grid.Column="1" FontSize="18" Background="#1E1E1E" Margin="10" IsReadOnly="True" IsEnabled="False" Foreground="White"/>
+                <TextBox Name="IdBox" Grid.Row="0" Grid.Column="1" FontSize="18" Background="#1E1E1E" Margin="5" IsReadOnly="True" IsEnabled="False" Foreground="White"/>
                 
-                <DatePicker Grid.Row="0" Grid.Column="2" SelectedDate="{Binding DueDate}" Height="30" Margin="10" Background="#1E1E1E"/>
+                <DatePicker Grid.Row="0" Grid.Column="2" SelectedDate="{Binding DueDate}" Height="30" Margin="5" Background="#1E1E1E"/>
                 
-                <ComboBox Grid.Row="0" Grid.Column="3" Name="StateCombo" Width="200" Margin="10" Background="#1E1E1E"/>
+                <ComboBox Grid.Row="0" Grid.Column="3" Name="StateCombo" Width="200" Margin="5" Background="#1E1E1E"/>
                 
-                <ScrollViewer Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" VerticalScrollBarVisibility="Auto" Margin="10" MaxWidth="700">
+                <ScrollViewer Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" VerticalScrollBarVisibility="Auto" Margin="5" MaxWidth="700">
                         <TextBox Text="{Binding Description}" TextWrapping="Wrap" AcceptsReturn="True" Background="#1E1E1E"/>
                 </ScrollViewer>
                 
@@ -41,16 +46,21 @@
                         
                         <TextBlock Background="#1E1E1E" Text="Assigned Users:" FontWeight="Bold" Margin="0,0,0,5" Padding="5"/>
                         <ScrollViewer Height="150" VerticalScrollBarVisibility="Auto">
-                                <ListBox Name="UsersList" Background="#1E1E1E"/>
+                                <ListBox Name="UsersList" SelectionMode="Multiple, Toggle" Background="#1E1E1E"/>
                         </ScrollViewer>
                         
                         <Border BorderThickness="1" BorderBrush="#1E1E1E" Margin="0,10,0,10"/>
                         
                         <TextBlock Background="#1E1E1E" Text="Assigned Groups:" FontWeight="Bold" Margin="0,0,0,5" Padding="5"/>
                         <ScrollViewer Height="150" VerticalScrollBarVisibility="Auto">
-                                <ListBox Name="GroupsList" Background="#1E1E1E"/>
+                                <ListBox Name="GroupsList" SelectionMode="Multiple, Toggle" Background="#1E1E1E"/>
                         </ScrollViewer>
                         
+                </StackPanel>
+                
+                <StackPanel Grid.Row="2" Grid.Column="2" Orientation="Horizontal">
+                        <Button Name="SaveButton" Content="Save" Width="80" HorizontalAlignment="Right" Margin="5" Command="{Binding SaveTaskCommand}"/>
+                        <Button Name="CloseButton" Content="Close" Width="80" HorizontalAlignment="Right" Margin="5" Command="{Binding CloseCommand}"/>
                 </StackPanel>
                 
         </Grid>
