--- a/TaskDesk_version2/Views/OpenTaskWindow.axaml
+++ b/TaskDesk_version2/Views/OpenTaskWindow.axaml
@@ -36,7 +36,7 @@
                 
                 <DatePicker Grid.Row="0" Grid.Column="2" SelectedDate="{Binding DueDate}" Height="30" Margin="5" Background="#1E1E1E"/>
                 
-                <ComboBox Grid.Row="0" Grid.Column="3" Name="StateCombo" Width="200" Margin="5" Background="#1E1E1E"/>
+                <ComboBox Grid.Row="0" Grid.Column="3" Name="StateCombo" SelectedItem="{Binding State}" Width="200" Margin="5" Background="#1E1E1E"/>
                 
                 <ScrollViewer Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" VerticalScrollBarVisibility="Auto" Margin="5" MaxWidth="700">
                         <TextBox Text="{Binding Description}" TextWrapping="Wrap" AcceptsReturn="True" Background="#1E1E1E"/>
@@ -46,14 +46,26 @@
                         
                         <TextBlock Background="#1E1E1E" Text="Assigned Users:" FontWeight="Bold" Margin="0,0,0,5" Padding="5"/>
                         <ScrollViewer Height="150" VerticalScrollBarVisibility="Auto">
-                                <ListBox Name="UsersList" SelectionMode="Multiple, Toggle" Background="#1E1E1E"/>
+                                <ListBox Name="UsersList" SelectionMode="Multiple, Toggle" SelectedItems="{Binding AssignedUsers}" ItemsSource="{Binding AllUsers}" Background="#1E1E1E">
+                                        <ListBox.ItemTemplate>
+                                                <DataTemplate>
+                                                        <TextBlock Text="{Binding FullName}"/>
+                                                </DataTemplate>
+                                        </ListBox.ItemTemplate>
+                                </ListBox>
                         </ScrollViewer>
                         
                         <Border BorderThickness="1" BorderBrush="#1E1E1E" Margin="0,10,0,10"/>
                         
                         <TextBlock Background="#1E1E1E" Text="Assigned Groups:" FontWeight="Bold" Margin="0,0,0,5" Padding="5"/>
                         <ScrollViewer Height="150" VerticalScrollBarVisibility="Auto">
-                                <ListBox Name="GroupsList" SelectionMode="Multiple, Toggle" Background="#1E1E1E"/>
+                                <ListBox Name="GroupsList" SelectionMode="Multiple, Toggle" SelectedItems="{Binding AssignedGroups}" ItemsSource="{Binding AllGroups}" Background="#1E1E1E">
+                                        <ListBox.ItemTemplate>
+                                                <DataTemplate>
+                                                        <TextBlock Text="{Binding Name}"/>
+                                                </DataTemplate>
+                                        </ListBox.ItemTemplate>
+                                </ListBox>
                         </ScrollViewer>
                         
                 </StackPanel>
