--- a/TaskDesk_version2/Views/ManageUsersWindow.axaml
+++ b/TaskDesk_version2/Views/ManageUsersWindow.axaml
@@ -22,6 +22,7 @@
                         <ColumnDefinition Width="100"/>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 
@@ -58,7 +59,7 @@
                 </ScrollViewer>
                 </StackPanel>
                 
-                <StackPanel Grid.Row="0" Grid.Column="3" Grid.RowSpan="5" Margin="5">
+                <StackPanel Grid.Row="0" Grid.Column="4" Grid.RowSpan="5" Margin="5">
                         <TextBox Name="SearchBar" Height="20" FontSize="14" Background="#1E1E1E" Margin="5" Watermark="Search..."/>
                         
                         <ScrollViewer VerticalScrollBarVisibility="Auto" Width="200">
@@ -71,6 +72,8 @@
                                 </ListBox>                      
                         </ScrollViewer>
                 </StackPanel>
+                
+                <Border Grid.Row="0" Grid.Column="3" Grid.RowSpan="6" BorderThickness="1" BorderBrush="Gray" Margin="5"/>
                 
                 <StackPanel Grid.Row="1" Grid.Column="0" MaxWidth="200" Grid.ColumnSpan="2" Margin="5">
                         <TextBlock FontSize="16" Background="#1E1E1E" Margin="5" VerticalAlignment="Center" Text="Email:"/>
