--- a/TaskDesk_version2/Views/ErrorWindow.axaml
+++ b/TaskDesk_version2/Views/ErrorWindow.axaml
@@ -2,14 +2,14 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:TaskDesk_version2.ViewModels"
         x:Class="TaskDesk_version2.Views.ErrorWindow"
-        Title="Task"
+        Title="ERROR"
         SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner">
         
         <StackPanel x:Name="Root">
-                <TextBlock x:Name="ErrorMassageBlock" TextWrapping="Wrap" Padding="10" Width="300" MaxWidth="300" Foreground="Red" FontSize="16"/>
+                <TextBlock x:Name="ErrorMassageBlock" TextWrapping="Wrap" Padding="10" MaxWidth="500" Foreground="Red" FontSize="16"/>
                 
-                <Button x:Name="OkButton" Content="OK" Width="40" HorizontalAlignment="Center" Margin="10"/>
+                <Button x:Name="OkButton" Content="OK" Width="50" HorizontalAlignment="Center" Margin="10"/>
         </StackPanel>
         
 </Window>
