--- a/TaskDesk_version2/Views/AddUserWindow.axaml
+++ b/TaskDesk_version2/Views/AddUserWindow.axaml
@@ -57,7 +57,7 @@
                 
                 <StackPanel Name="ButtonCell" Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Right" Spacing="8">
                         <Button Name="CancelButton" Content="Cancel" Command="{Binding CancelCommand}"/>
-                        <Button Name="OkButton" Content="OK" Command="{Binding SaveCommand}"/>
+                        <Button Name="OkButton" Content="OK" Command="{Binding SaveCommand}" IsDefault="True"/>
                 </StackPanel>
         </Grid>
         
