--- a/TaskDesk_version2/Views/AddGroupWindow.axaml
+++ b/TaskDesk_version2/Views/AddGroupWindow.axaml
@@ -44,7 +44,7 @@
                 <StackPanel Name="ButtonPanel" Grid.Row="3" Orientation="Horizontal">
                         
                         <Button Name="CancelButton" Content="Cancel" Command="{Binding CancelCommand}" Margin="5"/>
-                        <Button Name="OkButton" Content="OK" Command="{Binding SaveCommand}" Margin="5"/>
+                        <Button Name="OkButton" Content="OK" Command="{Binding SaveCommand}" Margin="5" IsDefault="True"/>
                 </StackPanel>
                 
         </Grid>
