--- a/TaskDesk_version2/Views/AddTaskWindow.axaml
+++ b/TaskDesk_version2/Views/AddTaskWindow.axaml
@@ -73,7 +73,7 @@
         
         <StackPanel Name="ButtonCell" Grid.Row="6" Orientation="Horizontal" HorizontalAlignment="Right" Spacing="8">
             <Button Name="CancelButton" Content="Cancel" Command="{Binding CancelCommand}"/>
-            <Button Name="OkButton" Content="OK" Command="{Binding SaveCommand}"/>
+            <Button Name="OkButton" Content="OK" Command="{Binding SaveCommand}" IsDefault="True"/>
         </StackPanel>
     </Grid>
 
